# cou-memos

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .taurignore  README.md  biome.json  c_memos  config.json  cou-memos.1.2.1.nupkg  package.json  pnpm-lock.yaml  tailwind.config.js  test.db  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yaml
.storybook/: main.ts  preview.ts  preview.tsx
choco-package/: cou-memos.nuspec
choco-package/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
cou-memos/tools/: chocolateyinstall.ps1
db/: c_memos
migrations/2023-09-10-131624_create_memos/: down.sql  up.sql
src/: App.tsx  AppProvider.tsx  NotificationProvider.tsx  bindings.ts  main.tsx  schema.rs  styles.css
src-tauri/: Cargo.toml  c_memos  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-09-10-131624_create_memos/: down.sql  up.sql
src-tauri/src/: config.rs  entity.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src-tauri/src/db/: memo.rs  memo_tag.rs  mod.rs  tag.rs
src/components/: ErrorBoundary.tsx  MemoInput.stories.ts  MemoInput.tsx  MemoList.tsx  MemoSearchBox.tsx  MemoView.stories.ts  MemoView.tsx
src/hooks/: useConfigFile.ts  useMemoList.ts  useMemoText.ts  useNotification.ts  useToast.ts
src/lib/: api.ts  commands.ts  editor.ts  extractTag.ts  memo.ts  memoDb.ts  memodb.ts  parseTagAndParagraph.test.tsx  parseTagAndParagraph.tsx  queryClient.ts  result.ts
src/pages/: ConfigPage.tsx  IndexPage.tsx
src/types/: apiError.ts  (+4 more)
(+27 files in other folders)
