[package]
name = "cou-memos"
version = "1.1.1"
description = "Memo app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "window-all",
    "protocol-asset",
    "dialog-all",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
specta = "1"
tauri-specta = { version = "1", features = ["javascript", "typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
